[package]
name = "com-inject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_Com_Marshal",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell"
]

[dependencies]
base64 = "0.21.0"
clap = "4.1.1"
anyhow = "1.0.68"
